--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         }
 
         .philosophy {
+            font-style: italic;
             margin: 2rem 0;
             color: #c1272d;
         }
